# opengl-stuff

./: .gitignore  README.md  TODO.md  parse_elements.jsx  wec.jsx
ae_script/: parse_elements.jsx
includes/: shader.h  stb_image.h
json_template/: data.json  test.json
lib/: readme.md
my_shader/: CMakeLists.txt  main.cpp
my_shader/include/glad/: glad.h
my_shader/src/: glad.c  main.cpp
my_shader/src/shader/: shader.cpp  shader.h
opengl_asteroids_instanced/: CMakeLists.txt
opengl_asteroids_instanced/src/: main.cpp
opengl_bezier/: CMakeLists.txt  shader_bezier.geom  shader_bezier.gs  shader_bezier.vs  test.json
opengl_bezier/src/: groupcontents.h  jsonreader.cpp  jsonreader.h  layersinfo.cpp  layersinfo.h  main.cpp  pathinfo.cpp  pathinfo.h  render_data_factory.cpp  render_data_factory.h  shapegroup.cpp  shapegroup.h  transform.cpp  transform.h
opengl_camera/: CMakeLists.txt
opengl_camera/src/: main.cpp
opengl_geometry_shader/: CMakeLists.txt
opengl_geometry_shader/src/: main.cpp
opengl_lightcolor/: CMakeLists.txt
opengl_lightcolor/src/: main.cpp
opengl_lightmap/: 4.2.lighting_maps.fs
opengl_model_loading/: CMakeLists.txt
opengl_model_loading/src/: main.cpp
opengl_multiple_light/: CMakeLists.txt
opengl_multiple_light/src/: main.cpp
opengl_stencil_testing/: CMakeLists.txt
opengl_stencil_testing/src/: main.cpp
opengl_texture/: CMakeLists.txt
opengl_texture/src/: main.cpp
opengl_transform/: CMakeLists.txt
opengl_transform/src/: main.cpp
render_grap/: CMakeLists.txt  data_lottie.json  data_mine.json  shader_bezier.frag  shader_bezier.geom  shader_bezier.vert  test.json
render_grap/src/: base_render_data.hpp  bezier_generator.hpp  color_render_data.cpp  color_render_data.hpp  earcut.hpp  fillinfo.cpp  fillinfo.h  groupcontents.cpp  groupcontents.h  json_data_manager.cpp  json_data_manager.h  jsonreader.cpp  jsonreader.h  layersinfo.cpp  layersinfo.h  main.cpp  pathinfo.cpp  pathinfo.h  polygon.cpp  polygon.h  render_content.cpp  render_content.hpp  render_data_factory.cpp  render_data_factory.h  shapegroup.cpp  shapegroup.h  transform.cpp  transform.h  transform_render_data.cpp  transform_render_data.hpp  vertices_render_data.cpp  vertices_render_data.hpp
resources/objects/14-girl-obj/: girl OBJ.mtl
test_opengl/: CMakeLists.txt
test_opengl/src/: main.cpp
